[package]
name = "vault_resource_controller"
version = "0.14.0"
edition = "2021"
publish = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"


[[bin]]
doc = false
name = "schemagen"
path = "src/schema_gen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = ["telemetry"]
telemetry = ["opentelemetry-otlp"]


[dependencies]
actix-web = "4.4.0"
futures = "0.3.31"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { version = "0.4.26", features = ["serde"] }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "env-filter",
    "chrono",
] }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tracing-actix-web = "0.7.18"

thiserror = { workspace = true }
anyhow = { workspace = true }
prometheus-client = "0.22.2"
vaultrs = { workspace = true }
serde_variant = "0.1.3"
itertools = "0.13.0"


mows-common-rust = { workspace = true }
gtmpl_value = { version = "0.5.0" }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.96.0"
