[package]
name = "vault_resource_controller"
version = "0.14.0"
edition = "2021"
publish = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"


[[bin]]
doc = false
name = "schemagen"
path = "src/schema_gen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = ["telemetry"]
telemetry = ["opentelemetry-otlp"]


[dependencies]
actix-web = { workspace = true, features = ["default"] }
futures = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
k8s-openapi = { workspace = true, features = ["latest"] }
schemars = { workspace = true, features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_yaml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
    "chrono",
] }
tracing-opentelemetry = { workspace = true, features = ["default"] }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tracing-actix-web = { workspace = true, features = ["default"] }

thiserror = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }
prometheus-client = { workspace = true }
vaultrs = { workspace = true, features = ["rustls"] }
serde_variant = { workspace = true }
itertools = { workspace = true, features = ["default"] }


mows-common-rust = { workspace = true, features = ["default"] }
gtmpl_value = { workspace = true }

kube = { workspace = true, features = ["runtime", "client", "derive"] }
