[package]
name = "zitadel-controller"
version = "0.14.0"
edition = "2021"
publish = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[[bin]]
doc = false
name = "main"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
doc = false
name = "test_client"
path = "src/test_client.rs"

[lib]
doc = false
path = "src/lib.rs"


[dependencies]
actix-web = "4.9.0"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.25"
chrono = { version = "0.4.26", features = ["serde"] }

tracing = "0.1.37"
opentelemetry = { version = "0.26.0", features = ["trace"] }


thiserror = "2.0.0"
anyhow = "1.0.93"
prometheus-client = "0.22.2"
vaultrs = "0.7.3"
serde_variant = "0.1.3"
itertools = "0.13.0"

tracing-actix-web = "0.7.14"

mows-common = { workspace = true }

zitadel = { workspace = true, features = [
    "api",
    "interceptors",
    "pbjson",
    "api-common",
    "proto_full",
] }
tonic = { version = "0.12.3" }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.96.0"

# testing new releases - ignore
#git = "https://github.com/kube-rs/kube.git"
#branch = "main"
#rev = "19b90ad3a4dbc83e1dd742847c7707333259b1bb"
#path = "../kube/kube"


[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
panic = "abort"
