[package]
name = "zitadel_resource_controller"
version = "0.14.0"
edition = "2021"
publish = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"


[lib]
doc = false
path = "src/lib.rs"


[dependencies]
serde_json = { workspace = true }
actix-web = "4.9.0"
futures = "0.3.31"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.25"
chrono = { version = "0.4.26", features = ["serde"] }

tracing = { workspace = true }
opentelemetry = { workspace = true, features = ["trace"] }


thiserror = { workspace = true }
anyhow = { workspace = true }
prometheus-client = "0.22.2"
vaultrs = { workspace = true }
serde_variant = "0.1.3"
itertools = "0.13.0"

tracing-actix-web = "0.7.14"

mows-common-rust = { workspace = true }

zitadel = { workspace = true, features = [
    "api",
    "interceptors",
    "pbjson",
    "api-common",
    "proto_full",
    "zitadel-object-v2beta",
    "api-user-v2",
] }

tonic = { version = "0.12.3" }
pbjson-types = "0.7.0"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.96.0"

# testing new releases - ignore
#git = "https://github.com/kube-rs/kube.git"
#branch = "main"
#rev = "19b90ad3a4dbc83e1dd742847c7707333259b1bb"
#path = "../kube/kube"


[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
panic = "abort"
