[package]
name = "zitadel-resource-controller"
version = "0.14.0"
edition = { workspace = true }
publish = false


[[bin]]
doc = false
name = "zitadel-resource-controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/build/crdgen.rs"

[[bin]]
doc = false
name = "schemagen"
path = "src/build/schemagen.rs"


[lib]
doc = false
path = "src/lib.rs"


[dependencies]
serde_json = { workspace = true, features = ["default"] }
actix-web = { workspace = true, features = ["default"] }
futures = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
k8s-openapi = { workspace = true, features = ["latest"] }
schemars = { workspace = true, features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

tracing = { workspace = true, features = ["default"] }
opentelemetry = { workspace = true, features = ["trace"] }


thiserror = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }
prometheus-client = { workspace = true }
vaultrs = { workspace = true, features = ["rustls"] }
serde_variant = { workspace = true }
itertools = { workspace = true, features = ["default"] }

tracing-actix-web = { workspace = true, features = ["default"] }

mows-common-rust = { workspace = true, features = ["default", "vault"] }

zitadel = { workspace = true, features = [
    "api",
    "interceptors",
    "pbjson",
    "api-common",
    "proto_full",
    "zitadel-object-v2beta",
    "api-user-v2",
] }

tonic = { version = "0.12.3", features = ["default"] }
pbjson-types = { workspace = true }

kube = { workspace = true, features = ["runtime", "derive", "default"] }
