[package]
name = "mows-common-rust"
version = "0.1.0"
edition = "2021"

[features]
default = ["telemetry"]
telemetry = [
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
]


[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "env-filter",
    "chrono",
] }

tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true, optional = true, default-features = false }
opentelemetry_sdk = { workspace = true, optional = true, features = [
    "rt-tokio",
] }

reqwest = { workspace = true, default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }

reqwest-tracing = { version = "0.5.4", features = ["opentelemetry_0_28"] }

reqwest-middleware = { version = "0.4.0", features = ["json", "rustls-tls"] }
http = "1.1.0"


rand = { workspace = true }
gtmpl = { workspace = true }
gtmpl_value = { workspace = true }
gtmpl_derive = { workspace = true }
bcrypt = { version = "0.15.1" }
md5 = { version = "0.7.0" }
sha2 = "0.10"
sha1 = "0.10.6"
data-encoding = { version = "2.6.0" }
serde_yaml = { workspace = true }

kube = { workspace = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { workspace = true, features = ["latest"] }
rcgen = { version = "0.13.2", features = ["pem", "crypto", "x509-parser"] }
time = "0.3.37"
pem = "3.0.5"
