[package]
name = "mows-common-rust"
version = "0.1.0"
edition = { workspace = true }

[features]
default = []
vault = ["vaultrs", "chrono"]


[dependencies]
thiserror = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default"] }

tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
    "chrono",
    "default",
] }

tracing-opentelemetry = { workspace = true, features = [
    "metrics",
    "tracing-log",
] }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true, features = [
    "trace",
    "logs",
    "grpc-tonic",
    "metrics",
] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }

reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }

reqwest-tracing = { workspace = true, features = ["opentelemetry_0_28"] }

reqwest-middleware = { version = "0.4.0", features = ["json", "rustls-tls"] }
http = "1.1.0"


rand = { workspace = true, features = ["default"] }
gtmpl-ng = { workspace = true, features = ["all-functions"] }
gtmpl_value = { workspace = true }
gtmpl_derive = { workspace = true }
serde_yaml = { workspace = true }

kube = { workspace = true, features = ["runtime", "derive", "default"] }
k8s-openapi = { workspace = true, features = ["latest"] }

utoipa = { workspace = true, features = ["default", "uuid", "chrono"] }
uuid = { workspace = true, features = ["v4"] }
path-clean = "1.0.1"
futures = { workspace = true, features = ["default"] }
# Vault client
vaultrs = { workspace = true, features = ["rustls"], optional = true }
chrono = { workspace = true, features = ["default"], optional = true }

# For diesel schema parsing and migration generation
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# For error display with syntax highlighting
syntect = "5.2"
atty = "0.2"

[dev-dependencies]
tempfile = "3.8"
