[package]
name = "mows-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["telemetry"]
telemetry = ["opentelemetry-otlp"]


[dependencies]
thiserror = "2.0.3"

tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "env-filter",
    "chrono",
] }
tracing-opentelemetry = "0.27.0"
opentelemetry = { version = "0.26.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.26.0", optional = true }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }

reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }

reqwest-tracing = { version = "0.5.4", features = ["opentelemetry_0_24"] }

reqwest-middleware = { version = "0.4.0", features = ["json", "rustls-tls"] }
http = "1.1.0"
rand = "0.8.5"
