[package]
name = "mows-vm-supervisor"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mows-vm-supervisor"
path = "src/main.rs"

[lib]
name = "mows_vm_supervisor"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_yaml_neo = { workspace = true }
utoipa = { workspace = true, features = ["chrono", "uuid"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }
axum = { workspace = true, features = ["default", "macros", "json", "ws"] }
axum-extra = { workspace = true, features = ["default", "typed-header", "cookie", "cookie-private"] }
tokio = { workspace = true, features = ["default", "macros", "rt-multi-thread", "process", "signal", "fs", "net", "sync", "io-util", "time"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = [
    "cors",
    "compression-full",
    "decompression-full",
    "trace",
    "fs",
] }
thiserror = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "fmt"] }
url = { workspace = true, features = ["serde"] }
futures-util = { workspace = true, features = ["std", "sink"] }

# DB
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid", "migrate"] }

# Auth / crypto
argon2 = { version = "0.5.3", features = ["std"] }
password-hash = { version = "0.6.1", features = ["alloc", "rand_core"] }
rand = { version = "0.9", features = ["std", "std_rng"] }
rand_core = "0.9"
base64 = "0.22"

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# CLI flags
clap = { version = "4.5", features = ["derive", "env"] }

# Static dir embed (for future web UI)
include_dir = "0.7"

[dev-dependencies]
tempfile = "3.10"
reqwest = { workspace = true, features = ["blocking", "rustls-tls", "json"] }
tokio-tungstenite = { workspace = true, features = ["connect"] }

[lints]
workspace = true
