[package]
name = "mozart"
version = "0.2.0"
edition = { workspace = true }

[dependencies]
mows-common-rust = { workspace = true }

clap = { version = "4.5", features = ["derive"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_yaml = { workspace = true }

gtmpl = { workspace = true }

jaq-core = "1.5"
jaq-std = "1.6"
jaq-parse = "1.0"
jaq-interpret = "1.5"

[dev-dependencies]
tempfile = "3.8"
