[package]
name = "mpm"
version = "0.5.3"
edition = { workspace = true }

[dependencies]
mows-common-rust = { workspace = true }

thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
colored = "2"
comfy-table = "7"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_yaml_neo = { workspace = true }
toml = "0.8"

gtmpl-ng = { workspace = true, features = ["all-functions"] }

jaq-core = "1.5"
jaq-std = "1.6"
jaq-parse = "1.0"
jaq-interpret = "1.5"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

walkdir = "2.5"

sha2 = { workspace = true }
tempfile = "3.8"
fs2 = "0.4"
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
libc = "0.2"
aho-corasick = "1.1"
ctrlc = "3.4"
strsim = "0.11"

[dev-dependencies]
tempfile = "3.8"
