[package]
name = "filez-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts-rs = "7.0.0"
serde = { version = "1.0", features = [
    "derive",
    "std",
], default-features = false }
serde_json = { version = "1" }
serde_yaml = { version = "0.9.27" }
anyhow = { version = "1" }
typetag = "0.2"
rand = "0.8.5"
