[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
publish = false


[[bin]]
name = "chat-server"
path = "src/main.rs"

[[bin]]
name = "openapi_dump"
path = "src/build/openapi_dump.rs"

[[bin]]
name = "run_migrations"
path = "src/build/run_migrations.rs"


[lib]
name = "chat_server_lib"
path = "src/lib.rs"


[dependencies]
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
utoipa-swagger-ui = { workspace = true, features = [
    "axum",
    "debug-embed",
    "vendored",
] }
utoipa = { workspace = true, features = [
    "chrono",
    "uuid",
    "openapi_extensions",
] }
utoipa-axum = { workspace = true }
axum = { workspace = true, features = ["default", "macros", "json", "ws"] }
axum-extra = { workspace = true, features = ["default", "typed-header"] }
mows-common-rust = { workspace = true, features = ["default"] }
mows-auth-core = { workspace = true }
tokio = { workspace = true, features = ["default", "macros", "rt-multi-thread", "sync"] }
thiserror = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
tower-http = { workspace = true, features = [
    "cors",
    "compression-full",
    "decompression-full",
    "trace",
] }
tower = { workspace = true }

url = { workspace = true, features = ["serde"] }
zitadel = { workspace = true, features = [
    "default",
    "oidc",
    "introspection_cache",
] }

diesel_migrations = "2.2.0"
diesel = { version = "2.2.10", features = [
    "chrono",
    "uuid",
    "postgres_backend",
    "serde_json",
] }
diesel-async = { version = "0.5.2", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
] }
diesel-enum = { workspace = true }

uuid = { workspace = true, features = ["serde", "v7"] }
chrono = { workspace = true, features = ["serde", "clock"] }

async-trait = { workspace = true }
futures = { workspace = true, features = ["default"] }
futures-util = { workspace = true, features = ["default"] }
openidconnect = { workspace = true, features = ["default"] }

[lints]
workspace = true
