[[bin]]
name = "main"
path = "src/main.rs"

[package]
name = "filez"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[dependencies]
hyper = { version = "0.14", default-features = false, features = [
    "server",
    "http1",
    "tcp",
    "stream",
    "http2",
] }
tokio = { version = "1.17.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
] }

filetime = "0.2"

simple-server-timing-header = "0.1.1"

mongodb = { version = "2.3.1", features = ["bson-serde_with"] }
futures = "0.3"
bson = "2.4.0"

serde = { version = "1.0", features = [
    "derive",
    "std",
], default-features = false }
serde_yaml = { version = "0.9.13" }
serde_json = { version = "1" }

anyhow = "1"
lazy_static = "1.3.0"
sha2 = { version = "0.10.6" }
hex = "0.4"
chrono = "0.4.22"
rand = "0.8.5"
hyper-staticfile = { version = "0.9.5" }
http-range = "0.1.5"
qstring = "0.7.2"

jsonwebtoken = "8"
reqwest = { workspace = true, features = [
    "rustls-tls",
], default-features = false }
once_cell = "1"

mime_guess = { git = "https://github.com/hfiguiere/mime_guess", branch = "dcraw-types" }

indicatif = "0.17.2"

cookie = "0.17.0"

regex = "1.7.1"

ts-rs = "7.0.0"

itertools = "0.11.0"

filez-common = { path = "../common/" }


# TODO go back to using the original mime_guess as dcraw types get merged
[patch.crates-io]
mime_guess = { git = "https://github.com/hfiguiere/mime_guess", branch = "dcraw-types" }


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"


[profile.dev]


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false
