[package]
name = "server"
version = "0.14.0"
edition = "2021"
publish = false


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "crdgen"
path = "src/controller/crdgen.rs"

[lib]
name = "server_lib"
path = "src/lib.rs"


[features]
timing = ["dep:axum-server-timing"]
default = ["timing"]


[dependencies]
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true, features = ["default"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipa = { workspace = true, features = [
    "chrono",
    "uuid",
    "openapi_extensions",
] }
utoipa-axum = { workspace = true }
axum = { workspace = true, features = ["default"] }
axum-extra = { workspace = true, features = ["default"] }
mows-common-rust = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["default"] }
thiserror = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }
tracing = { workspace = true, features = ["default"] }
tower-http = { workspace = true, features = [
    "cors",
    "compression-full",
    "decompression-full",
] }

mime_guess = { workspace = true, features = ["default"] }
url = { workspace = true, features = ["serde"] }
zitadel = { workspace = true, features = [
    "axum",
    "introspection_cache",
    "default",
] }

diesel_migrations = "2.2.0"
diesel = { version = "2.2.10", features = [
    "chrono",
    "uuid",
    "postgres_backend",
    "numeric",
    "serde_json",
] }
diesel-async = { version = "0.5.2", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
    "r2d2",
] }

diesel-enum = "0.2.1"
diesel_as_jsonb = "1.0.1"

tokio-postgres = { version = "0.7.13" }
#tokio-postgres-rustls = "0.13.0"
#rustls = "0.23.27"
#futures-util = { workspace = true, features=["default"] }


uuid = { workspace = true, features = ["serde", "v7"] }
chrono = { workspace = true, features = ["serde"] }
sha2 = { workspace = true, features = ["default"] }


axum-server-timing = { git = "https://github.com/JensWalter/axum-server-timing/", rev = "ec8362e98a0e98f7724ca1f9413c128e581461ad", optional = true }

minio = { version = "0.3.0", features = [
    "rustls-tls",
    "ring",
], default-features = false }


async-trait = { workspace = true }
futures-util = { workspace = true, features = ["default"] }

serde_variant = "0.1.3"
axum-tracing-opentelemetry = { workspace = true }
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }

kube = { workspace = true, features = ["runtime", "default", "derive"] }
schemars = { workspace = true, features = ["chrono"] }
k8s-openapi = { workspace = true, features = ["latest"] }
serde_yaml = { workspace = true }
prometheus-client = { workspace = true }
opentelemetry = { workspace = true, features = ["trace"] }
futures = { workspace = true, features = ["default"] }
