[package]
name = "server"
version = "0.14.0"
edition = "2021"
publish = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
mows-common = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }

mime_guess = { workspace = true }
url = { workspace = true, features = ["serde"] }
zitadel = { workspace = true, features = ["interceptors", "axum"] }
